# Collector

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  rust.yaml
assets/icons/: Collector.icns  Collectors-Notebook.icns
collector/: .gitignore
collector/collector/: AppSettings.swift  CollectionDetail.swift  CollectionsHome.swift  CollectorStore.swift  Components.swift  ContentView.swift  Helpers.swift  ImportExport.swift  ItemDetail.swift  ItemEditor.swift  Models.swift  NewCollectionSheet.swift  Photos.swift  RecycleBinView.swift  SearchTab.swift  SettingsTab.swift  Theme.swift  collectorApp.swift
collector/collector.xcodeproj/: project.pbxproj
collector/collectorTests/: collectorTests.swift
collector/collectorUITests/: collectorUITests.swift  collectorUITestsLaunchTests.swift
collector_android/: settings.gradle.kts
collector_android/app/: build.gradle.kts
collector_android/app/src/androidTest/java/me/zq/collectors/: ExampleInstrumentedTest.kt
collector_android/app/src/main/: AndroidManifest.xml
collector_android/app/src/main/java/me/zq/collectors/: MainActivity.kt
collector_android/app/src/main/res/values/: strings.xml  themes.xml
collector_android/app/src/test/java/me/zq/collectors/: ExampleUnitTest.kt
collector_android/gradle/: libs.versions.toml
collector_android/gradle/wrapper/: gradle-wrapper.properties
src/: image_util.rs  main.rs  model.rs  theme.rs  update.rs  view.rs
src-tauri/src/: image_util.rs  main.rs  model.rs
ui/: app.js  index.html  main.slint  styles.css
(+27 files in other folders)
