[package]
name = "collectors-notebook"
version = "1.0.2"
edition = "2021"
description = "Personal item collection cataloguing app"

[[bin]]
name = "collectors-notebook"
path = "src/main.rs"

[dependencies]
slint = "1.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"
rfd = "0.14"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }

[build-dependencies]
slint-build = "1.16.1"

# Windows-only: embeds the .exe icon (see build.rs).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
strip = true
